services/procedures/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: procedures
  labels:
    app: procedures
spec:
  replicas: 1
  selector:
    matchLabels:
      app: procedures
  template:
    metadata:
      labels:
        app: procedures
    spec:
      containers:
        - name: procedures
          image: democracy/procedures:pr-592
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: '1'
              memory: 1Gi
            requests:
              cpu: 10m
              memory: 90Mi
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
