services/procedures/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: procedures
  name: procedures
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3005
  selector:
    app: procedures
