services/procedures/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: procedures
  labels:
    app: procedures
spec:
  ingressClassName: nginx
  rules:
    - host: procedures.${var.hostname}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: procedures
                port:
                  number: 80
